<resources>
    <string name="app_name">Market-Admin</string>

    <string name="pay_amount">Pay ₹ %1$d</string>
    <string name="profile_pic">profile_pic</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="remove_from_cart">Remove from cart</string>
    <string name="total_amount">Total Amount</string>

    <!--    Recycler view resource-->
    <string name="customer_name">Customer Name :</string>
    <string name="customer_contact">Contact : </string>
    <string name="customer_address">Address : </string>
    <string name="customer_order">Order : </string>
    <string name="total_cost">Total Amount : </string>
    <string name="price">Price :</string>
    <string name="quantity">Quantity :</string>
    <string name="stock_availability">Stock availability</string>
    <string name="stock">Stock</string>
    <string name="update_product">Update Product</string>
    <string name="print_receipt">Print Receipt</string>
    <string name="config_product">Configure Product</string>
    <string name="add_product">Add Product</string>
    <string name="product_name">Product Name :</string>
    <string name="unit">Unit :</string>
</resources>
