<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textStyle="bold"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Some Product" />

        <TextView
            android:id="@+id/price_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/price"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/title" />

        <EditText
            android:id="@+id/edit_price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            app:layout_constraintBottom_toBottomOf="@id/price_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/guideline"
            app:layout_constraintTop_toTopOf="@id/price_label" />

        <TextView
            android:id="@+id/quantity_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/quantity"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/guideline"

            app:layout_constraintTop_toBottomOf="@id/price_label" />

        <EditText
            android:id="@+id/edit_quantity"

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            app:layout_constraintBottom_toBottomOf="@id/quantity_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/guideline"
            app:layout_constraintTop_toTopOf="@id/quantity_label" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <!--        stock (quantity) price unit-->

        <TextView
            android:id="@+id/stock_available_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/stock_availability"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@id/guideline"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/stock_label" />

        <CheckBox
            android:id="@+id/stock_available_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/stock_available_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@id/guideline"
            app:layout_constraintTop_toTopOf="@id/stock_available_label"
            app:layout_constraintVertical_bias="0.666" />

        <TextView
            android:id="@+id/stock_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/stock"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/quantity_label" />

        <EditText
            android:id="@+id/edit_stock"

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            app:layout_constraintBottom_toBottomOf="@+id/stock_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/stock_label"
            app:layout_constraintTop_toTopOf="@id/stock_label" />

        <Button
            android:id="@+id/button_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/update_product"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/stock_available_check" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>