<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tool="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/add_product"
        android:background="@color/color_primary"
        app:titleTextColor="@color/color_on_secondary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0"
        tool:layout_editor_absoluteX="16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                tool:text="Product"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/product_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/product_name"
                android:textSize="18sp"
                app:layout_constraintEnd_toStartOf="@id/guideline"
                app:layout_constraintHorizontal_bias="0.862"
                app:layout_constraintTop_toBottomOf="@id/title"
                tool:layout_editor_absoluteY="32dp" />

            <TextView
                android:id="@+id/price_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/price"
                android:textSize="18sp"
                app:layout_constraintEnd_toStartOf="@id/guideline"
                app:layout_constraintTop_toBottomOf="@id/product_name"/>

            <EditText
                android:id="@+id/product_name_et"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="text"
                app:layout_constraintTop_toTopOf="@id/product_name"
                app:layout_constraintBottom_toBottomOf="@id/product_name"
                app:layout_constraintStart_toEndOf="@id/guideline"
                app:layout_constraintEnd_toEndOf="parent"/>

            <EditText
                android:id="@+id/edit_price"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                app:layout_constraintBottom_toBottomOf="@id/price_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/guideline"
                app:layout_constraintTop_toTopOf="@id/price_label" />

            <TextView
                android:id="@+id/quantity_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/quantity"
                android:textSize="18sp"
                app:layout_constraintEnd_toStartOf="@+id/guideline"
                app:layout_constraintTop_toBottomOf="@id/price_label" />

            <EditText
                android:id="@+id/edit_quantity"

                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                app:layout_constraintBottom_toBottomOf="@id/quantity_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/guideline"
                app:layout_constraintTop_toTopOf="@id/quantity_label" />

            <TextView
                android:id="@+id/unit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/unit"
                android:textSize="18sp"
                app:layout_constraintEnd_toStartOf="@id/guideline"
                app:layout_constraintTop_toBottomOf="@id/quantity_label"/>

            <EditText
                android:id="@+id/edit_unit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="text"
                app:layout_constraintTop_toTopOf="@id/unit"
                app:layout_constraintBottom_toBottomOf="@id/unit"
                app:layout_constraintStart_toEndOf="@id/guideline"
                app:layout_constraintEnd_toEndOf="parent"/>


            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5" />

            <!--        stock (quantity) price unit-->

            <TextView
                android:id="@+id/stock_available_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/stock_availability"
                android:textSize="18sp"
                app:layout_constraintEnd_toStartOf="@id/guideline"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/stock_label" />

            <CheckBox
                android:id="@+id/stock_available_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@id/stock_available_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@id/guideline"
                app:layout_constraintTop_toTopOf="@id/stock_available_label"
                app:layout_constraintVertical_bias="0.5" />

            <TextView
                android:id="@+id/stock_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/stock"
                android:textSize="18sp"
                app:layout_constraintEnd_toStartOf="@id/guideline"
                app:layout_constraintTop_toBottomOf="@id/unit" />

            <EditText
                android:id="@+id/edit_stock"

                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                app:layout_constraintBottom_toBottomOf="@+id/stock_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/guideline"
                app:layout_constraintTop_toBottomOf="@id/stock_label"
                app:layout_constraintTop_toTopOf="@id/stock_label" />

            <Button
                android:id="@+id/button_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/add_product"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/stock_available_check" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>